# pyserver-users-allauth

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
demoServer/: manage.py  requirements.txt
demoServer/demoServer/: asgi.py  settings.py  urls.py  wsgi.py
demoServer/static/: main_theme.min.css  styles.css
demoServer/templates/: navbar.html  server_base.html
src/pyserver_users_allauth/: adapter.py  admin.py  apps.py  conf.py  forms.py  managers.py  models.py  new_urls.py  urls.py  views.py
src/pyserver_users_allauth/inactive/: change_password.html  login.html  password_change_succesfull.html
src/pyserver_users_allauth/inactive/registration/: login.html  login_extended.html
src/pyserver_users_allauth/migrations/: 0001_initial.py
src/pyserver_users_allauth/templates/account/: login.html  logout.html  signup.html  signup_close.html
src/pyserver_users_allauth/templates/allauth/elements/: badge.html  button.html  button_group.html  field.html  panel.html  provider.html  provider_list.html  table.html
src/pyserver_users_allauth/templates/allauth/layouts/: base.html
src/pyserver_users_allauth/templates/users_allauth/: profile_settings.html
src/pyserver_users_allauth/tests/: test_models.py
